fix: header and main content overwrap

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,3 @@
-.header {
-    height: 85px;
-}
-
 .navbar {
     display: flex;
     justify-content: space-between;
