--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,9 @@
 .container {
-  min-height: calc(100vh - 85px);
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 85px);
 }
 
 .main {
